Fix two :app:test failures, one mine and one environmental
- FacadeErrorSummaryTest used List.of with a null element, which throws
  before the code under test runs; Arrays.asList carries the null.
- FacadeInventoryTest assumed the repo-root working directory, so all
  three tests died on missing files under Gradle (which runs module
  tests from app/). Paths now resolve from either directory, matching
  the tolerance the other inventory suites already have.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>